examples/test/testpolicy2144.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2144
  namespace: namespace321
spec:
  podSelector:
    matchLabels:
      key24: value45
      key13: value3
      key39: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value20
          key38: value9
      podSelector:
        matchLabels:
          key27: value37
          key42: value13
          key45: value32
